Refactor SocketChannelFdAccess and NativeTcpCarrier for improved FD access and backend selection